# Duck

./: .gitignore  Duck.toml  README.md  Workspace.toml  duck.py  main.py  setup.cfg  test_lsp.py
autoload/: wf.vim  ws.vim
autoload/wf/: buffer.vim  logger.vim  lsp.vim  position.vim  rpc.vim
autoload/wf/lsp/: diagnostics.vim
autoload/ws/: buffer.vim  loclist.vim  logger.vim  lsp.vim  omni.vim  position.vim  rpc.vim  sign.vim
autoload/ws/lsp/: completion.vim  diagnostics.vim
build_tasks/omnisharp-roslyn/: .gitignore  Workspace.toml
neovim/: Workspace.toml
plugin/: workspacefolder.vim
samples/dotnetcore/: Program.cs
samples/python_single/: sample.py
tests/: test_lsp.py  test_lsp_dotnet.py  test_lsp_pyls.py  test_rpc.py  test_workspaceinfo.py
workspacefolder/: __init__.py  dispatcher.py  http.py  httptransport.py  json_rpc.py  lsp.py  pipestream.py  rpc.py  task.py  util.py  wrap.py
workspacefolder/lsp/: __init__.py  document.py  languageserver.py  upstream.py  workspace.py  workspaceinfo.py
workspacefolder/rpc/: __init__.py  dispatcher.py  http.py  json_rpc.py  pipestream.py  stdinout.py
workspacefolder/task/: __init__.py  entry.py  windows_tool_search.py
