[metadata]
name = workspace
version = attr: workspacefolder.VERSION
description = DAP, LSP launcher and taks runner
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    workspacefolder
install_requires =
    toml

[options.entry_points]
console_scripts =
    wf = workspace:main

