[metadata]
name = workspace
version = attr: workspacefolder.VERSION
description = DAP, LSP launcher and taks runner
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3
test_suite = tests

[options]
packages =
    workspacefolder
install_requires =
    toml

[options.entry_points]
console_scripts =
    ws = workspacefolder:main

